# tokyo-polimi-dt-jsac

./: .gitignore  requirements.txt
obj_meshes/: coms.ply  estima.ply  roads.ply  rsu.ply  spike_rsu.ply  tree.ply
ookayama_sumo/: continuous_rerouters.add.xml  ookayama.net.xml  ookayama.sumocfg  rerouting.add.xml  routes.rou.xml
panasonic-rsu-pattern/: azimuth_beam_16.csv  elevation_beam_16.csv
scenarios/ookayama_full_flat/: ookayama.xml
scenarios/ookayama_full_flat/meshes/: Plane.ply  _100_mesh.ply  _101_mesh.ply  _102_mesh.ply  (+614 more)
scenarios/ookayama_osm/: ookayama_osm.xml
scenarios/tokyo-poc-notrees/: tokyo-poc-notrees.xml
van3twin-py/: jsac-simulator.ipynb  new-poc-script-buffer-new.ipynb  new-poc-script-buffer.ipynb  new-poc-script-untested.ipynb  new-poc-script.ipynb  new-poc-tester.ipynb  new-tokyo-poc.ipynb  poc_startup.py  poc_startup_old.py  pyproject.toml  sim_startup.py  simulation_output.json
van3twin-py/antennas/: custom_antenna.py
van3twin-py/core/: filters.py  rt.py
van3twin-py/network/: lena_lookup_tables.py  nr.py
van3twin-py/poc/: filters.py  light_rt.py  rt.py  setup.py  topology.py  utils.py  utils_numpy.py
van3twin-py/topology/: GRAPH_GENERATOR_README.md  QUICK_START.py  example_graph_generation.py  graph_generation_tutorial.ipynb  graph_generator.py
van3twin-py/visualizer/: coord_utils.py  csv_watcher.py  data_parser.py  file_index.py  manager.py  server.py  settings.json  settings.py
van3twin-py/visualizer/static/: app.js  graph_visualization.js  index.html  map_layer.js  settings_panel.js  style.css  timeline.js  tooltip.js
(+627 files in other folders)
