[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "van3twin-py"
version = "0.1"
description = "VaN3Twin Python Version"
requires-python = ">=3.9"

dependencies = [
    "sionna-rt",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "networkx>=3.0",
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]

[tool.setuptools]
packages = ["antennas", "core", "datasets", "network", "topology", "visualizer"]
